Update build.yml with "jobs: {debug,release}"

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  debug:
     strategy:
       fail-fast: false
 
@@ -15,4 +15,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - run: bash cmd/build.sh
+      - run: bash cmd/debug.sh
+
+  release:
+    needs: debug
+
+    strategy:
+      fail-fast: false
+
+      matrix:
+        GITHUB_RUNNER: [ubuntu-latest, macos-latest, windows-latest]
+
+    runs-on: ${{ matrix.GITHUB_RUNNER }}
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - run: bash cmd/release.sh
