Export namespace yao::com{} into yao{} in inc/yao/com.hpp

--- a/tst/yao/CMakeLists.txt
+++ b/tst/yao/CMakeLists.txt
@@ -5,3 +5,7 @@ add_subdirectory(def)
 add_subdirectory(prt)
 
 add_subdirectory(req)
+
+add_executable(tst__yao__com tst__yao__com.cpp)
+target_link_libraries(tst__yao__com yao)
+add_test(tst__yao__com tst__yao__com)
