--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,13 +9,21 @@ jobs:
 
       matrix:
         GITHUB_RUNNER: [ubuntu-latest, macos-latest, windows-latest]
+        CMAKE_CXX_COMPILER: [c++, clang++]
+        exclude:
+          - GITHUB_RUNNER: macos-latest
+            CMAKE_CXX_COMPILER: clang++
+          - GITHUB_RUNNER: windows-latest
+            CMAKE_CXX_COMPILER: clang++
 
     runs-on: ${{ matrix.GITHUB_RUNNER }}
 
     steps:
       - uses: actions/checkout@v4
 
-      - run: bash cmd/debug.sh
+      - run: >
+          bash cmd/debug.sh
+          -D CMAKE_CXX_COMPILER=${{ matrix.CMAKE_CXX_COMPILER }}
 
   release:
     needs: debug
@@ -25,10 +33,18 @@ jobs:
 
       matrix:
         GITHUB_RUNNER: [ubuntu-latest, macos-latest, windows-latest]
+        CMAKE_CXX_COMPILER: [c++, clang++]
+        exclude:
+          - GITHUB_RUNNER: macos-latest
+            CMAKE_CXX_COMPILER: clang++
+          - GITHUB_RUNNER: windows-latest
+            CMAKE_CXX_COMPILER: clang++
 
     runs-on: ${{ matrix.GITHUB_RUNNER }}
 
     steps:
       - uses: actions/checkout@v4
 
-      - run: bash cmd/release.sh
+      - run: >
+          bash cmd/release.sh
+          -D CMAKE_CXX_COMPILER=${{ matrix.CMAKE_CXX_COMPILER }}
