--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,12 +18,24 @@ set(CMAKE_CXX_STANDARD 20)
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   string(JOIN " " CMAKE_CXX_FLAGS -Wall -Wextra -Wpedantic)
+  if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    string(JOIN " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Werror)
+  endif()
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
   string(JOIN " " CMAKE_CXX_FLAGS -Weverything)
+  if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    string(JOIN " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Werror)
+  endif()
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
   string(JOIN " " CMAKE_CXX_FLAGS -Weverything)
+  if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    string(JOIN " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Werror)
+  endif()
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
   string(JOIN " " CMAKE_CXX_FLAGS /Wall)
+  if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    string(JOIN " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} /WX)
+  endif()
 else()
   message(FATAL_ERROR
     "CMAKE_CXX_COMPILER_ID: `${CMAKE_CXX_COMPILER_ID}` is not supported.")
