--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,22 +17,46 @@ endif()
 set(CMAKE_CXX_STANDARD 20)
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  string(JOIN " " CMAKE_CXX_FLAGS -Wall -Wextra -Wpedantic)
+  string(JOIN " " CMAKE_CXX_FLAGS
+    -Wall
+    -Wextra
+    -Wpedantic
+
+    -Warith-conversion # This affects warnings from -Wconversion
+    -Wconversion
+    -Wformat=2
+    -Wsign-conversion # Disabled by default with -Wconversion
+  )
   if(CMAKE_BUILD_TYPE STREQUAL "Release")
     string(JOIN " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Werror)
   endif()
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-  string(JOIN " " CMAKE_CXX_FLAGS -Weverything)
+  string(JOIN " " CMAKE_CXX_FLAGS
+    -Weverything
+
+    -Wno-c++98-compat
+    -Wno-reserved-identifier
+  )
   if(CMAKE_BUILD_TYPE STREQUAL "Release")
     string(JOIN " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Werror)
   endif()
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
-  string(JOIN " " CMAKE_CXX_FLAGS -Weverything)
+  string(JOIN " " CMAKE_CXX_FLAGS
+    -Weverything
+
+    -Wno-c++98-compat
+  )
   if(CMAKE_BUILD_TYPE STREQUAL "Release")
     string(JOIN " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Werror)
   endif()
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-  string(JOIN " " CMAKE_CXX_FLAGS /Wall)
+  string(JOIN " " CMAKE_CXX_FLAGS
+    /EHsc # Warning C4530 and C4577; Exception handling model
+
+    /Wall
+
+    /wd5045 # Insert Spectre mitigation for memory load
+  )
   if(CMAKE_BUILD_TYPE STREQUAL "Release")
     string(JOIN " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} /WX)
   endif()
