--- a/tst/yao/prt/CMakeLists.txt
+++ b/tst/yao/prt/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(impl)
+
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
   add_executable(tst__yao__prt__print_format____nullptr tst__yao__prt__print_format____nullptr.cpp)
   target_link_libraries(tst__yao__prt__print_format____nullptr yao)
