Add performance measurement to {func,tmpl}::print_format()

--- a/exe/yao/prt/CMakeLists.txt
+++ b/exe/yao/prt/CMakeLists.txt
@@ -1,2 +1,4 @@
+add_subdirectory(impl)
+
 add_executable(yao__prt__print_format yao__prt__print_format.cpp)
 target_link_libraries(yao__prt__print_format yao)
