Add YAO_CONFIG__PRINT_FORMAT in config.hpp, and update print_format()

--- a/config.hpp.in
+++ b/config.hpp.in
@@ -19,4 +19,12 @@
 #error "YAO_CONFIG__COMPILER"
 #endif
 
+#define YAO_CONFIG__PRINT_FORMAT__FUNCTION 1 // Variadic arguments
+#define YAO_CONFIG__PRINT_FORMAT__TEMPLATE 2 // Parameter pack
+#define YAO_CONFIG__PRINT_FORMAT @YAO_CONFIG__PRINT_FORMAT@
+#if (YAO_CONFIG__PRINT_FORMAT != YAO_CONFIG__PRINT_FORMAT__FUNCTION) &&        \
+    (YAO_CONFIG__PRINT_FORMAT != YAO_CONFIG__PRINT_FORMAT__TEMPLATE)
+#error "YAO_CONFIG__PRINT_FORMAT"
+#endif
+
 #endif
