--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
     branches: [main]
 
 jobs:
-  debug:
+  debug_default_config:
     strategy:
       fail-fast: false
 
@@ -22,11 +22,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - run: >
-          bash cmd/debug.sh
+          bash cmd/debug_default_config.sh
           -D CMAKE_CXX_COMPILER=${{ matrix.CMAKE_CXX_COMPILER }}
 
-  release:
-    needs: debug
+  release_default_config:
+    needs: debug_default_config
 
     strategy:
       fail-fast: false
@@ -46,5 +46,53 @@ jobs:
       - uses: actions/checkout@v4
 
       - run: >
-          bash cmd/release.sh
+          bash cmd/release_default_config.sh
+          -D CMAKE_CXX_COMPILER=${{ matrix.CMAKE_CXX_COMPILER }}
+
+  debug_various_config:
+    needs: release_default_config
+
+    strategy:
+      fail-fast: false
+
+      matrix:
+        GITHUB_RUNNER: [ubuntu-latest, macos-latest, windows-latest]
+        CMAKE_CXX_COMPILER: [c++, clang++]
+        exclude:
+          - GITHUB_RUNNER: macos-latest
+            CMAKE_CXX_COMPILER: clang++
+          - GITHUB_RUNNER: windows-latest
+            CMAKE_CXX_COMPILER: clang++
+
+    runs-on: ${{ matrix.GITHUB_RUNNER }}
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - run: >
+          bash cmd/debug_various_config.sh
+          -D CMAKE_CXX_COMPILER=${{ matrix.CMAKE_CXX_COMPILER }}
+
+  release_various_config:
+    needs: debug_various_config
+
+    strategy:
+      fail-fast: false
+
+      matrix:
+        GITHUB_RUNNER: [ubuntu-latest, macos-latest, windows-latest]
+        CMAKE_CXX_COMPILER: [c++, clang++]
+        exclude:
+          - GITHUB_RUNNER: macos-latest
+            CMAKE_CXX_COMPILER: clang++
+          - GITHUB_RUNNER: windows-latest
+            CMAKE_CXX_COMPILER: clang++
+
+    runs-on: ${{ matrix.GITHUB_RUNNER }}
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - run: >
+          bash cmd/release_various_config.sh
           -D CMAKE_CXX_COMPILER=${{ matrix.CMAKE_CXX_COMPILER }}
