--- a/exe/yao/re/stt/CMakeLists.txt
+++ b/exe/yao/re/stt/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(yao__re__stt__EpsilonState yao__re__stt__EpsilonState.cpp)
 target_link_libraries(yao__re__stt__EpsilonState yao)
+
+add_executable(yao__re__stt__SymbolState yao__re__stt__SymbolState.cpp)
+target_link_libraries(yao__re__stt__SymbolState yao)
