--- a/tst/yao/re/stt/CMakeLists.txt
+++ b/tst/yao/re/stt/CMakeLists.txt
@@ -2,6 +2,10 @@ add_executable(tst__yao__re__stt__EpsilonState tst__yao__re__stt__EpsilonState.c
 target_link_libraries(tst__yao__re__stt__EpsilonState yao)
 add_test(tst__yao__re__stt__EpsilonState tst__yao__re__stt__EpsilonState)
 
+add_executable(tst__yao__re__stt__KleeneState tst__yao__re__stt__KleeneState.cpp)
+target_link_libraries(tst__yao__re__stt__KleeneState yao)
+add_test(tst__yao__re__stt__KleeneState tst__yao__re__stt__KleeneState)
+
 add_executable(tst__yao__re__stt__SymbolState tst__yao__re__stt__SymbolState.cpp)
 target_link_libraries(tst__yao__re__stt__SymbolState yao)
 add_test(tst__yao__re__stt__SymbolState tst__yao__re__stt__SymbolState)
