--- a/tst/yao/re/stt/CMakeLists.txt
+++ b/tst/yao/re/stt/CMakeLists.txt
@@ -1,3 +1,7 @@
+add_executable(tst__yao__re__stt__c_r_State_with_same_Symbol tst__yao__re__stt__c_r_State_with_same_Symbol.cpp)
+target_link_libraries(tst__yao__re__stt__c_r_State_with_same_Symbol yao)
+add_test(tst__yao__re__stt__c_r_State_with_same_Symbol tst__yao__re__stt__c_r_State_with_same_Symbol)
+
 add_executable(tst__yao__re__stt__EpsilonState tst__yao__re__stt__EpsilonState.cpp)
 target_link_libraries(tst__yao__re__stt__EpsilonState yao)
 add_test(tst__yao__re__stt__EpsilonState tst__yao__re__stt__EpsilonState)
