--- a/tst/yao/re/stt/CMakeLists.txt
+++ b/tst/yao/re/stt/CMakeLists.txt
@@ -13,3 +13,7 @@ add_test(tst__yao__re__stt__KleeneState tst__yao__re__stt__KleeneState)
 add_executable(tst__yao__re__stt__SymbolState tst__yao__re__stt__SymbolState.cpp)
 target_link_libraries(tst__yao__re__stt__SymbolState yao)
 add_test(tst__yao__re__stt__SymbolState tst__yao__re__stt__SymbolState)
+
+add_executable(tst__yao__re__stt__UnionState tst__yao__re__stt__UnionState.cpp)
+target_link_libraries(tst__yao__re__stt__UnionState yao)
+add_test(tst__yao__re__stt__UnionState tst__yao__re__stt__UnionState)
