Add cmake function yao__tst(), and reduce reduplicated cmake codes

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -1,3 +1,9 @@
+function(yao__tst NAME)
+  add_executable(${NAME} ${NAME}.cpp)
+  target_link_libraries(${NAME} yao)
+  add_test(NAME ${NAME} COMMAND cmake -E env $<TARGET_FILE:${NAME}>)
+endfunction()
+
 add_subdirectory(cpp)
 
 add_subdirectory(yao)
