Add cmake function yao__exe(), and reduce reduplicated cmake codes

--- a/exe/CMakeLists.txt
+++ b/exe/CMakeLists.txt
@@ -1,1 +1,6 @@
+function(yao__exe NAME)
+  add_executable(${NAME} ${NAME}.cpp)
+  target_link_libraries(${NAME} yao)
+endfunction()
+
 add_subdirectory(yao)
