--- a/exe/yao/def/CMakeLists.txt
+++ b/exe/yao/def/CMakeLists.txt
@@ -1,11 +1,7 @@
-add_executable(yao__def__check____YAO_CHECK____false yao__def__check____YAO_CHECK____false.cpp)
-target_link_libraries(yao__def__check____YAO_CHECK____false yao)
+yao__exe(yao__def__check____YAO_CHECK____false)
 
-add_executable(yao__def__check____YAO_CHECK____true yao__def__check____YAO_CHECK____true.cpp)
-target_link_libraries(yao__def__check____YAO_CHECK____true yao)
+yao__exe(yao__def__check____YAO_CHECK____true)
 
-add_executable(yao__def__claim____YAO_CLAIM____false yao__def__claim____YAO_CLAIM____false.cpp)
-target_link_libraries(yao__def__claim____YAO_CLAIM____false yao)
+yao__exe(yao__def__claim____YAO_CLAIM____false)
 
-add_executable(yao__def__claim____YAO_CLAIM____true yao__def__claim____YAO_CLAIM____true.cpp)
-target_link_libraries(yao__def__claim____YAO_CLAIM____true yao)
+yao__exe(yao__def__claim____YAO_CLAIM____true)
