--- a/exe/yao/prt/CMakeLists.txt
+++ b/exe/yao/prt/CMakeLists.txt
@@ -1,5 +1,3 @@
-add_executable(yao__prt__print_type yao__prt__print_type.cpp)
-target_link_libraries(yao__prt__print_type yao)
+yao__exe(yao__prt__print_type)
 
-add_executable(yao__prt__print_value yao__prt__print_value.cpp)
-target_link_libraries(yao__prt__print_value yao)
+yao__exe(yao__prt__print_value)
