Add yao::com{not_null<>,owner<>,zstring,czstring}, and export them to yao{}

--- a/tst/yao/CMakeLists.txt
+++ b/tst/yao/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(com)
+
 add_subdirectory(def)
 
 add_subdirectory(prt)
@@ -5,3 +7,5 @@ add_subdirectory(prt)
 add_subdirectory(re)
 
 add_subdirectory(req)
+
+yao__tst(tst__yao__com)
