--- a/exe/yao/re/stt/CMakeLists.txt
+++ b/exe/yao/re/stt/CMakeLists.txt
@@ -1,5 +1,7 @@
 yao__exe(yao__re__stt__ConcatState)
 
+yao__exe(yao__re__stt__ConcreteVirtualState)
+
 yao__exe(yao__re__stt__EpsilonState)
 
 yao__exe(yao__re__stt__KleeneState)
