--- a/exe/yao/re/stt/CMakeLists.txt
+++ b/exe/yao/re/stt/CMakeLists.txt
@@ -4,6 +4,8 @@ yao__exe(yao__re__stt__ConcreteVirtualState)
 
 yao__exe(yao__re__stt__EpsilonState)
 
+yao__exe(yao__re__stt__ErasedState)
+
 yao__exe(yao__re__stt__KleeneState)
 
 yao__exe(yao__re__stt__SymbolState)
