--- a/tst/yao/re/stt/CMakeLists.txt
+++ b/tst/yao/re/stt/CMakeLists.txt
@@ -8,6 +8,8 @@ yao__tst(tst__yao__re__stt__ConcreteVirtualState)
 
 yao__tst(tst__yao__re__stt__EpsilonState)
 
+yao__tst(tst__yao__re__stt__ErasedState)
+
 yao__tst(tst__yao__re__stt__KleeneState)
 
 yao__tst(tst__yao__re__stt__SymbolState)
