Add YAO_CLAIM() in inc/yao/def/claim.hpp

--- a/exe/yao/def/CMakeLists.txt
+++ b/exe/yao/def/CMakeLists.txt
@@ -1,3 +1,7 @@
 yao__exe(yao__def__check____YAO_CHECK____false)
 
 yao__exe(yao__def__check____YAO_CHECK____true)
+
+yao__exe(yao__def__claim____YAO_CLAIM____false)
+
+yao__exe(yao__def__claim____YAO_CLAIM____true)
