--- a/tst/yao/re/stt/CMakeLists.txt
+++ b/tst/yao/re/stt/CMakeLists.txt
@@ -5,3 +5,5 @@ yao__tst(tst__yao__re__stt__EpsilonState)
 yao__tst(tst__yao__re__stt__KleeneState)
 
 yao__tst(tst__yao__re__stt__SymbolState)
+
+yao__tst(tst__yao__re__stt__UnionState)
