Rename some files for convention

--- a/exe/yao/CMakeLists.txt
+++ b/exe/yao/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_subdirectory(def)
 
-yao__exe(custom_comparator_1)
+yao__exe(yao__custom_comparator_1)
 
-yao__exe(custom_comparator_2)
+yao__exe(yao__custom_comparator_2)
 
-yao__exe(default_comparator)
+yao__exe(yao__default_comparator)
