--- a/tst/yao/req/CMakeLists.txt
+++ b/tst/yao/req/CMakeLists.txt
@@ -1,3 +1,7 @@
 yao__tst(tst__yao__req__c_t_std_map)
 
 yao__tst(tst__yao__req__c_t_std_set)
+
+yao__tst(tst__yao__req__c_t_std_shared_ptr)
+
+yao__tst(tst__yao__req__c_t_std_unique_ptr)
