--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,14 @@ endif()
 set(CMAKE_CXX_STANDARD 20)
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  string(JOIN " " CMAKE_CXX_FLAGS -Wall -Wextra -Wpedantic)
+  string(JOIN " " CMAKE_CXX_FLAGS
+    -Wall
+    -Wextra
+    -Wpedantic
+
+    -Wswitch-default
+    -Wswitch-enum
+  )
   if(CMAKE_BUILD_TYPE STREQUAL "Release")
     string(JOIN " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Werror)
   endif()
@@ -26,7 +33,8 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     -Weverything
 
     -Wno-c++98-compat-pedantic
-    -Wno-reserved-macro-identifier
+    -Wno-covered-switch-default
+    -Wno-reserved-identifier
   )
   if(CMAKE_BUILD_TYPE STREQUAL "Release")
     string(JOIN " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Werror)
@@ -36,6 +44,8 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
     -Weverything
 
     -Wno-c++98-compat-pedantic
+    -Wno-covered-switch-default
+    -Wno-zero-as-null-pointer-constant
   )
   if(CMAKE_BUILD_TYPE STREQUAL "Release")
     string(JOIN " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Werror)
