--- a/exe/yao/re/stt/CMakeLists.txt
+++ b/exe/yao/re/stt/CMakeLists.txt
@@ -9,3 +9,5 @@ yao__exe(yao__re__stt__KleeneState)
 yao__exe(yao__re__stt__SymbolState)
 
 yao__exe(yao__re__stt__UnionState)
+
+yao__exe(yao__re__stt__UniqueState)
